# xplatj

./: .gitignore  .sonarcloud.properties  README.md
android-project/: build.gradle  settings.gradle
android-project/src/main/: AndroidManifest.xml
android-project/src/main/java/project/gdx/: AndroidModule.java  AndroidStorage.java  MainActivity.java
android-project/src/main/java/project/sdl/: MainActivity.java
android-project/src/main/java/project/webapp/: MainActivity.java
android-project/src/main/java/project/xplat/launcher/: AssetsCopy.java  MainActivity.java
android-project/src/main/java/project/xplat/launcher/pxprpcapi/: ApiServer.java  Utils.java
android-project/src/main/java/project/xplat/launcher/pxprpcapi/androidhelper/: Intent2.java  Map2.java  SysBase.java
android-project/src/main/java/project/xplat/launcher/pxprpcapi/videocapture/: AndroidCamera2.java
android-project/src/main/jniLibs/armeabi-v7a/: .gitignore
commonj/: .gitignore  build.gradle
commonj/src/main/java/lib/pursuer/simplewebserver/: WebSocketTunnel.java
commonj/src/main/java/xplatj/gdxconfig/: Gdx2.java  GdxEntry.java
commonj/src/main/java/xplatj/gdxconfig/control/: GraphicsControl.java
javase-lwjgl-project/: build.gradle  settings.gradle
javase-lwjgl-project/src/main/java/main/: JMain.java
javase-lwjgl-project/src/main/java/project/xplatj/backend/jse/: DesktopModule.java
launcher/: CMakeLists.txt  SDLLoader.c  build.sh  launcher.c
tinycc-build/: android-config.h  android-config.mak  configure.sh
tools/: install-local-maven.sh
(+1 files in other folders)
